2002-01-23  Glyph Lefkowitz  <glyph@zelda.twistedmatrix.com>

	* Incompatible change to PB: all remote methods now return
	Deferreds.  This doesn't break code in as many places as possible,
	but the connection methods now work differently and have different
	signatures.

	* Incompatible change to Banana: Banana now really supports floats
	and long integers.  This involved removing some nasty hackery that
	was previously part of the protocol spec, so you'll need to
	upgrade.

	* Added a feature to Jelly: Jelly now supports unicode strings.

	* Improved Twisted.Forums considerably: still needs work, but it's
	growing into an example of what you can do with a Twisted.Web
	application.

	* Added Twisted.Web.Webpassport -- generic mechanism for web-based
	login to arbitrary services.  This in conjunction with some code
	in Forum that uses it.

	* Incompatible change in Enterprise: all query methods now return
	Deferreds, as well as take arguments in an order which makes it
	possible to pass arbitrary argument lists for using the database's
	formatting characters rather than python's.

2002-01-15  Glyph Lefkowitz  <glyph@zelda.twistedmatrix.com>

	* twisted/internet/passport.py: (and friends) Retrieval of
	perspectives is now asynchronous, hooray (this took way too long)!
	Perspectives may now be stored in external data sources.  Lurching
	slowly towards a stable API for the Passport system, along with
	Sean's recent commits of tools to manipulate it.

2002-01-14  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/python/explorer.py: reimplementated.  So it's better.
	And yes, I broke the API.

	* twisted/manhole/ui/spelunk_gnome.py: Less duplication of visages,
	and they're draggable now too.

2002-01-13  Itamar Shtull-Trauring  <itamarst@twistedmatrix.com>

	* Changed twisted.enterprise.adabi so operations can accept lists
	  of arguments. This allows us to use the database adaptor's native
	  SQL quoting ability instead of either doing it ourselves, or the